9 Adding styles for item list, individual items and making the list responsive

--- a/src/assets/styles/general/colors.scss
+++ b/src/assets/styles/general/colors.scss
@@ -1,9 +1,9 @@
 // main theme colors
-$blue-dark: #1868B7;
-$blue-med-dark: #2081E2;
+$blue-dark: #1868b7;
+$blue-med-dark: #2081e2;
 $blue-med-light: #15b2e5;
-$blue-light: #2BCDE4;
-$gray: #E5E8EB;
+$blue-light: #2bcde4;
+$gray: #e5e8eb;
 
 // extra colors
 $white: #fff;
@@ -11,3 +11,4 @@ $black: #000;
 
 // text
 $text-default: #353840;
+$text-light: #686b74;
