--- a/src/assets/styles/general/global.scss
+++ b/src/assets/styles/general/global.scss
@@ -1,5 +1,5 @@
-@import "./typography.scss";
-@import "./colors.scss";
+@import "./typography";
+@import "./colors";
 
 * {
 	box-sizing: border-box;
