--- a/src/assets/styles/general/variables.scss
+++ b/src/assets/styles/general/variables.scss
@@ -1,1 +1,7 @@
 $page-max-width: 1600px;
+
+// break points
+$break-laptop: 1366px;
+$break-tablet-big: 1024px;
+$break-tablet-small: 768px;
+$break-phone-big: 520px;
