--- a/src/assets/styles/components/app.scss
+++ b/src/assets/styles/components/app.scss
@@ -1,29 +1,34 @@
-@import "../general/index.scss";
+@import "../general/variables";
+@import "../general/colors";
+@import "../general/mixins";
 
 .app {
-    display: flex;
-    min-height: 100vh;
-    max-width: $page-max-width;
+	display: flex;
+	max-width: $page-max-width;
+	min-height: 100vh;
 	width: 100%;
+}
 
-    .aside {
-        background-color: $gray;
-        width: 240px;
-    
-        &__nav {
-            a {
-                font-weight: bold;
-                color: $blue-med-dark;
-        
-                &.router-link-exact-active {
-                    color: $blue-light;
-                }
-            }
-        }
-    }
-    
-    .content {
-        background-color: red;
-        flex-grow: 1;
-    }
+.aside {
+	background-color: $gray;
+	width: 12%;
+
+	@include respond-to(max-width, $break-tablet-small) {
+		display: none;
+	}
+
+	&__nav {
+		a {
+			color: $blue-med-dark;
+			font-weight: bold;
+		}
+	}
+}
+
+.content {
+	width: 88%;
+
+	@include respond-to(max-width, $break-tablet-small) {
+		width: 100%;
+	}
 }
