--- a/src/assets/styles/general/typography.scss
+++ b/src/assets/styles/general/typography.scss
@@ -1,2 +1,14 @@
 // weights: 300, 400, 500, 700
-$font-default: 'Poppins', Arial, sans-serif;
+$font-default: "Poppins", Arial, sans-serif;
+
+// font weights
+$font-w-thin: 300;
+$font-w-normal: 400;
+$font-w-bold-med: 500;
+$font-w-bold: 700;
+
+// font sizes
+$font-12: 12px;
+$font-13: 13px;
+$font-14: 14px;
+$font-15: 15px;
