--- a/src/assets/styles/components/item.scss
+++ b/src/assets/styles/components/item.scss
@@ -5,7 +5,6 @@
 	border: 1px solid rgba($text-light, 0.7);
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
-	cursor: pointer;
 	text-align: center;
 	transition: all 0.1s;
 	width: 100%;
@@ -37,6 +36,6 @@
 
 	&:hover {
 		box-shadow: 0 2px 6px rgba($black, 0.2);
-		margin-top: -4px;
+		transform: translateY(-4px);
 	}
 }
