--- a/src/assets/styles/general/typography.scss
+++ b/src/assets/styles/general/typography.scss
@@ -12,4 +12,7 @@ $font-12: 12px;
 $font-13: 13px;
 $font-14: 14px;
 $font-15: 15px;
+$font-16: 16px;
+$font-18: 18px;
 $font-22: 22px;
+$font-28: 28px;
