--- a/src/assets/styles/components/item.scss
+++ b/src/assets/styles/components/item.scss
@@ -5,6 +5,7 @@
 	border: 1px solid rgba($text-light, 0.7);
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
+	color: $text-default;
 	text-align: center;
 	transition: all 0.1s;
 	width: 100%;
