--- a/src/assets/styles/components/pagination.scss
+++ b/src/assets/styles/components/pagination.scss
@@ -14,6 +14,10 @@
 		&:not([disabled]):hover {
 			color: $blue-med-dark;
 		}
+
+		&:disabled {
+			color: rgba($text-light, 0.7);
+		}
 	}
 
 	&__number {
