3 Remaking navigation into a separate component

--- a/src/assets/styles/general/variables.scss
+++ b/src/assets/styles/general/variables.scss
@@ -9,3 +9,9 @@ $break-phone-big: 520px;
 
 // vertical
 $break-v-600: 630px;
+
+
+// navigation component variables
+$aside-width-default: 300px;
+$aside-width-small: 200px;
+$aside-nav-height: 60px;
