10 Adding manual refetch button

--- a/src/assets/styles/general/colors.scss
+++ b/src/assets/styles/general/colors.scss
@@ -12,3 +12,8 @@ $black: #000;
 // text
 $text-default: #353840;
 $text-light: #686b74;
+
+// buttons
+$loader-border-color: rgba($black, 0.6);
+$button-general-hover-color: rgba($gray, 0.3);
+$button-general-active-color: rgba($gray, 0.5);
