--- a/src/assets/styles/general/animations.scss
+++ b/src/assets/styles/general/animations.scss
@@ -2,7 +2,7 @@
 
 @keyframes loading-border-before {
 	0% {
-		border-left-color: rgba($black, 0.6);
+		border-left-color: $loader-border-color;
 		border-top-color: transparent;
 		height: 100%;
 		width: 0;
@@ -10,7 +10,7 @@
 
 	50% {
 		border-left-color: transparent;
-		border-top-color: rgba($black, 0.6);
+		border-top-color: $loader-border-color;
 		height: 0;
 		width: 0;
 	}
@@ -26,7 +26,7 @@
 @keyframes loading-border-after {
 	0% {
 		border-bottom-color: transparent;
-		border-right-color: rgba($black, 0.6);
+		border-right-color: $loader-border-color;
 		height: 0;
 		width: 100%;
 	}
@@ -39,7 +39,7 @@
 	}
 
 	100% {
-		border-bottom-color: rgba($black, 0.6);
+		border-bottom-color: $loader-border-color;
 		border-right-color: transparent;
 		height: 100%;
 		width: 0;
