--- a/src/assets/styles/general/variables.scss
+++ b/src/assets/styles/general/variables.scss
@@ -14,3 +14,6 @@ $break-v-600: 630px;
 $aside-width-default: 300px;
 $aside-width-small: 200px;
 $aside-nav-height: 60px;
+
+// z-index
+$z-index-overlay: 1;
