8 Fixing styling issues with various components

--- a/src/assets/styles/components/app.scss
+++ b/src/assets/styles/components/app.scss
@@ -12,6 +12,7 @@
 
 .content {
 	margin-left: $aside-width-default;
+	padding-top: $aside-nav-height;
 	width: 100%;
 
 	@include respond-to(max-width, $break-tablet-big) {
