--- a/src/assets/styles/general/variables.scss
+++ b/src/assets/styles/general/variables.scss
@@ -4,6 +4,7 @@ $page-max-width: 1600px;
 // horizontal
 $break-laptop: 1366px;
 $break-tablet-big: 1024px;
+$break-tablet-medium: 960px;
 $break-tablet-small: 768px;
 $break-phone-big: 520px;
 
