8 Adding a loader for top_ownerships

--- a/src/assets/styles/components/asset-info.scss
+++ b/src/assets/styles/components/asset-info.scss
@@ -133,6 +133,12 @@
 		padding-bottom: 16px;
 	}
 
+	// section 4
+	// traits
+
+
+	// section 5
+	// top ownerships
 	&__ownership {
 		align-items: center;
 		display: flex;
