--- a/src/assets/styles/general/animations.scss
+++ b/src/assets/styles/general/animations.scss
@@ -45,3 +45,13 @@
 		width: 0;
 	}
 }
+
+@keyframes spinner {
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
