--- a/src/assets/styles/components/user-data.scss
+++ b/src/assets/styles/components/user-data.scss
@@ -1,3 +1,5 @@
+@import "../general/typography";
+
 .user-data {
 	align-items: center;
 	display: flex;
@@ -14,6 +16,7 @@
 	}
 
 	&__name {
+		font-size: $font-17;
 		margin-left: 12px;
 	}
 }
