--- a/src/assets/styles/components/asset-info.scss
+++ b/src/assets/styles/components/asset-info.scss
@@ -40,6 +40,7 @@
 	// video/image and link to OpenSea
 	&__graphics {
 		border-bottom: 1px solid rgba($black, 0.15);
+		min-height: 200px;
 		width: 100%;
 	}
 
@@ -51,28 +52,32 @@
 	}
 
 	&__logo-image {
-		height: 54px;
-		margin-right: -20px;
+		height: 53px;
+		left: -1px;
+		position: absolute;
 		width: 54px;
-		z-index: $z-index-overlay;
 	}
 
 	&__logo-link {
+		background-color: $blue-med-dark;
 		border: 1px solid $blue-dark;
+		border-bottom-left-radius: 60px;
 		border-left: 0;
-		border-radius: 8px;
-		color: $black;
+		border-top-left-radius: 60px;
+		color: $white;
 		display: inline-block;
 		font-size: $font-18;
 		font-weight: $font-w-bold-med;
 		height: 54px;
-		line-height: 50px;
-		padding: 2px 6px 2px 26px;
-		transition: background-color 0.1s;
+		line-height: 52px;
+		padding: 0 6px 0 60px;
+		position: relative;
+		transition: all 0.2s;
 	}
 
 	&__logo-link:hover {
-		background-color: rgba($gray, 0.35);
+		background-color: $white;
+		color: $black;
 	}
 
 	&__logo-link:active {
