--- a/src/assets/styles/general/variables.scss
+++ b/src/assets/styles/general/variables.scss
@@ -6,13 +6,15 @@ $break-laptop: 1366px;
 $break-tablet-big: 1024px;
 $break-tablet-medium: 960px;
 $break-tablet-small: 768px;
+$break-navigation-mobile: 600px;
 $break-phone-big: 520px;
+$break-phone-medium: 425px;
 
 // vertical
 $break-v-600: 630px;
 
 // navigation component variables
-$aside-width-default: 300px;
+$aside-width-default: 240px;
 $aside-width-small: 200px;
 $aside-nav-height: 60px;
 
