--- a/src/assets/styles/components/navigation.scss
+++ b/src/assets/styles/components/navigation.scss
@@ -14,7 +14,7 @@
 		width: $aside-width-small;
 	}
 
-	@include respond-to(max-width, $break-phone-big) {
+	@include respond-to(max-width, $break-navigation-mobile) {
 		display: none;
 	}
 
@@ -54,6 +54,7 @@
 	}
 
 	&__content {
+		background-color: rgba($blue-med-light, 0.03);
 		display: flex;
 		flex-direction: column;
 		height: calc(100vh - $aside-nav-height);
