--- a/src/assets/styles/general/variables.scss
+++ b/src/assets/styles/general/variables.scss
@@ -6,9 +6,11 @@ $break-laptop: 1366px;
 $break-tablet-big: 1024px;
 $break-tablet-medium: 960px;
 $break-tablet-small: 768px;
-$break-navigation-mobile: 600px;
 $break-phone-big: 520px;
 $break-phone-medium: 425px;
+$break-phone-small: 375px;
+
+$break-navigation-mobile: $break-tablet-small;
 
 // vertical
 $break-v-600: 630px;
