--- a/src/assets/styles/components/navigation.scss
+++ b/src/assets/styles/components/navigation.scss
@@ -15,7 +15,9 @@
 	}
 
 	@include respond-to(max-width, $break-navigation-mobile) {
-		display: none;
+		height: $aside-nav-height;
+		position: relative;
+		width: 100%;
 	}
 
 	&__nav {
@@ -23,6 +25,10 @@
 		border-bottom: 1px solid rgba($gray, 0.8);
 		height: $aside-nav-height;
 		padding: 8px 0;
+		
+		@include respond-to(max-width, $break-navigation-mobile) {
+			border-bottom-color: $gray;
+		}
 	}
 
 	&__nav-list {
@@ -33,16 +39,50 @@
 			justify-content: space-between;
 			padding: 0 6px;
 		}
+
+		@include respond-to(max-width, $break-navigation-mobile) {
+			justify-content: flex-start;
+		}
 	}
 
 	&__nav-item {
 		display: inline-block;
+
+		@include respond-to(max-width, $break-navigation-mobile) {
+			margin-right: 24px;
+		}
+
+		@include respond-to(max-width, $break-phone-small) {
+			margin-right: 16px;
+		}
+	}
+
+	&__nav-item:first-of-type {
+		@include respond-to(max-width, $break-navigation-mobile) {
+			margin-left: 16px;
+		}
+	}
+
+	&__nav-item-mobile {
+		bottom: 8px;
+		display: none;
+		position: absolute;
+		right: 16px;
+
+		@include respond-to(max-width, $break-navigation-mobile) {
+			display: inline-block;
+		}
 	}
 
 	&__nav-link {
 		color: $text-default;
 		font-size: $font-28;
 		font-weight: $font-w-bold-med;
+
+		@include respond-to(max-width, $break-phone-small) {
+			font-size: $font-24;
+			line-height: 44px;
+		}
 
 		&:hover {
 			color: rgba($blue-med-dark, 0.8);
@@ -51,6 +91,12 @@
 		&:active {
 			color: $blue-med-dark;
 		}
+	}
+
+	&__nav-mobile-button {
+		border-radius: 4px;
+		font-size: $font-26;
+		padding: 2px 6px;
 	}
 
 	&__content {
@@ -67,6 +113,10 @@
 
 		@include respond-to(max-height, $break-v-600) {
 			justify-content: space-between;
+		}
+
+		@include respond-to(max-width, $break-navigation-mobile) {
+			display: none;
 		}
 	}
 
