--- a/src/assets/styles/components/navigation.scss
+++ b/src/assets/styles/components/navigation.scss
@@ -103,7 +103,7 @@
 		background-color: rgba($blue-med-light, 0.03);
 		display: flex;
 		flex-direction: column;
-		height: calc(100vh - $aside-nav-height);
+		min-height: calc(100vh - $aside-nav-height);
 		padding: 64px 8px 16px;
 		position: relative;
 
@@ -118,6 +118,14 @@
 		@include respond-to(max-width, $break-navigation-mobile) {
 			display: none;
 		}
+	}
+
+	&__content--mobile {
+		align-items: center;
+		background-color: rgba($blue-med-light, 0.03);
+		display: flex;
+		padding-top: 64px;
+		z-index: $z-index-mobile-nav;
 	}
 
 	&__list-title {
@@ -137,6 +145,10 @@
 		}
 	}
 
+	&__content--mobile &__list-container {
+		width: 40%;
+	}
+
 	&__list-item {
 		margin-bottom: 10px;
 	}
@@ -152,6 +164,10 @@
 		}
 	}
 
+	&__content--mobile &__logo-container {
+		text-align: center;
+	}
+
 	&__logo-title {
 		font-size: $font-14;
 		margin: 16px 0 4px;
@@ -159,5 +175,9 @@
 
 	&__logo {
 		max-width: 100%;
+	}
+
+	&__content--mobile &__logo {
+		max-width: 70%;
 	}
 }
