--- a/src/assets/styles/components/asset-info.scss
+++ b/src/assets/styles/components/asset-info.scss
@@ -13,6 +13,7 @@
 	}
 
 	&__section {
+		background-color: rgba($gray, 0.09);
 		border: 1px solid rgba($black, 0.15);
 		border-radius: 8px;
 		margin-bottom: 36px;
