--- a/src/assets/styles/components/item.scss
+++ b/src/assets/styles/components/item.scss
@@ -13,6 +13,7 @@
 
 	&__image {
 		border-bottom: 1px solid rgba($text-light, 0.3);
+		display: inline-block;
 		height: 252px;
 		object-fit: cover;
 		width: 100%;
