--- a/src/assets/styles/general/typography.scss
+++ b/src/assets/styles/general/typography.scss
@@ -15,6 +15,7 @@ $font-15: 15px;
 $font-16: 16px;
 $font-17: 17px;
 $font-18: 18px;
+$font-20: 20px;
 $font-22: 22px;
 $font-24: 24px;
 $font-26: 26px;
