--- a/src/assets/styles/components/asset-info.scss
+++ b/src/assets/styles/components/asset-info.scss
@@ -22,6 +22,10 @@
 		word-break: break-word;
 	}
 
+	&__section:first-of-type {
+		overflow: unset;
+	}
+
 	&__left-column &__section:nth-of-type(1) {
 		border: 1px solid rgba($black, 0.35);
 		margin-bottom: 24px;
@@ -58,6 +62,10 @@
 		width: 100%;
 	}
 
+	&__graphics:focus {
+		outline-offset: 6px;
+	}
+
 	&__logo-container {
 		align-items: center;
 		display: flex;
@@ -81,6 +89,10 @@
 		line-height: 52px;
 		padding: 0 6px 0 60px;
 		position: relative;
+	}
+
+	&__logo-link:focus {
+		outline-offset: 6px;
 	}
 
 	// section 2
