--- a/src/assets/styles/components/item.scss
+++ b/src/assets/styles/components/item.scss
@@ -12,7 +12,6 @@
 	width: 100%;
 
 	&__image-container {
-		border-bottom: 1px solid rgba($text-light, 0.3);
 		height: 252px;
 		position: relative;
 		width: 100%;
@@ -33,6 +32,7 @@
 	}
 
 	&__info {
+		border-top: 1px solid rgba($text-light, 0.3);
 		padding: 4px 16px 8px;
 		text-align: left;
 	}
