--- a/src/assets/styles/components/item.scss
+++ b/src/assets/styles/components/item.scss
@@ -2,14 +2,21 @@
 @import "../general/typography";
 
 .item {
-	background-color: rgba($gray, 0.09);
-	border: 1px solid rgba($text-light, 0.7);
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	color: $text-default;
-	text-align: center;
-	transition: all 0.1s;
-	width: 100%;
+	&__container {
+		background-color: rgba($gray, 0.09);
+		border: 1px solid rgba($text-light, 0.7);
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
+		color: $text-default;
+		text-align: center;
+		transition: all 0.1s;
+		width: 100%;
+
+		&:hover {
+			box-shadow: 0 2px 6px rgba($black, 0.2);
+			transform: translateY(-4px);
+		}
+	}
 
 	&__image-container {
 		height: 252px;
@@ -57,8 +64,7 @@
 		height: 46px;
 	}
 
-	&:hover {
-		box-shadow: 0 2px 6px rgba($black, 0.2);
-		transform: translateY(-4px);
+	&:focus {
+		outline-offset: 4px;
 	}
 }
