--- a/src/assets/styles/general/global.scss
+++ b/src/assets/styles/general/global.scss
@@ -157,6 +157,10 @@ button {
 	border: 2px solid $loader-border-color;
 }
 
+.loader-button:focus {
+	outline-offset: 6px;
+}
+
 .loader-button:hover {
 	background-color: $button-general-hover-color;
 }
@@ -196,7 +200,8 @@ button {
 }
 
 // for screen reader
-.sr-only:not(:focus):not(:active) {
+.sr-only:not(:focus):not(:active),
+.sr-only:focus {
 	clip: rect(0 0 0 0);
 	clip-path: inset(50%);
 	height: 1px;
