--- a/src/assets/styles/general/typography.scss
+++ b/src/assets/styles/general/typography.scss
@@ -1,21 +1,17 @@
-// weights: 300, 400, 500, 700
+// weights: 500, 700
 $font-default: "Poppins", Arial, sans-serif;
 
 // font weights
-$font-w-thin: 300;
-$font-w-normal: 400;
 $font-w-bold-med: 500;
 $font-w-bold: 700;
 
 // font sizes
-$font-12: 12px;
 $font-13: 13px;
 $font-14: 14px;
 $font-15: 15px;
 $font-16: 16px;
 $font-17: 17px;
 $font-18: 18px;
-$font-20: 20px;
 $font-22: 22px;
 $font-24: 24px;
 $font-26: 26px;
